--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p>
         <a href="lab1/lab1_1.html"> Задание 1 </a><br>
         <a href="lab1/lab1_2.html"> Задание 2 </a><br>
-        <a href="lab1/lab1_3/index.html"> Задание 3 </a><br>
+        <a href="lab1/lab1_3.html"> Задание 3 </a><br>
         <a href="lab1/lab1_4.html"> Задание 4 </a><br>
         <a href="lab1/lab1_5.html"> Задание 5 </a><br>
     </p>
@@ -17,7 +17,7 @@
     <p>
         <a href="lab2/lab2_1.html"> Задание 1 </a><br>
         <a href="lab2/lab2_2.html"> Задание 2 </a><br>
-        <a href="lab2/lab2_3/index.html"> Задание 3 </a><br>
+        <a href="lab2/lab2_3.html"> Задание 3 </a><br>
         <a href="lab2/lab2_4.html"> Задание 4 </a><br>
         <a href="lab2/lab2_5.html"> Задание 5 </a><br>
     </p>
