--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="lab2/lab2_3.html"> Задание 3 </a><br>
         <a href="lab2/lab2_4.html"> Задание 4 </a><br>
         <a href="lab2/lab2_5.html"> Задание 5 </a><br>
+        <a href="lab2/lab2_6.html"> Задание 5 </a><br>
     </p>
       <li><h2>Лаб 3</h2></li>    
     <p>
@@ -29,6 +30,8 @@
         <a href="lab3/lab3_4.html"> Задание 4 </a><br>
         <a href="lab3/lab3_5.html"> Задание 5 </a><br>
         <a href="lab3/lab3_6.html"> Задание 6 </a><br>
+        <a href="lab3/lab3_7.html"> Задание 7 </a><br>
+        <a href="lab3/lab3_8.html"> Задание 8 </a><br>
     </p>
       <li><h2>Лаб 4</h2></li>
     <p>
@@ -41,6 +44,9 @@
         <a href="lab5/lab5_2.html"> Задание 2 </a><br>
         <a href="lab5/lab5_3.html"> Задание 3 </a><br>
         <a href="lab5/lab5_4.html"> Задание 4 </a><br>
+        <a href="lab5/lab5_5.html"> Задание 5 </a><br>
+        <a href="lab5/lab5_6.html"> Задание 6 </a><br>
+        <a href="lab5/lab5_7.html"> Задание 7 </a><br>
     </p>    
       <li><h2>Лаб 6</h2></li>
     <p>
@@ -50,7 +56,8 @@
     </p>
       <li><h2>Лаб 7</h2></li>
     <p>
-        <a href="lab7/index.html"> Задание 1 </a><br>
+        <a href="lab7/lab7_1"> Задание 1 </a><br>
+        <a href="lab7/lab7_2"> Задание 2 </a><br>
     </p>
     </ul> 
   </body>
