--- a/index.html
+++ b/index.html
@@ -37,16 +37,17 @@
     <p>
         <a href="lab4/lab4_1.html"> Задание 1 </a><br>
         <a href="lab4/lab4_2.html"> Задание 2 </a><br>
+        <a href="lab4/lab4_3.html"> Задание 3 </a><br>
+        <a href="lab4/lab4_4.html"> Задание 4 </a><br>
+        <a href="lab4/lab4_5.html"> Задание 5 </a><br>
+        <a href="lab4/lab4_6.html"> Задание 6 </a><br>
+        <a href="lab4/lab4_7.html"> Задание 7 </a><br>
     </p>
       <li><h2>Лаб 5</h2></li>
     <p>
         <a href="lab5/lab5_1.html"> Задание 1 </a><br>
         <a href="lab5/lab5_2.html"> Задание 2 </a><br>
         <a href="lab5/lab5_3.html"> Задание 3 </a><br>
-        <a href="lab5/lab5_4.html"> Задание 4 </a><br>
-        <a href="lab5/lab5_5.html"> Задание 5 </a><br>
-        <a href="lab5/lab5_6.html"> Задание 6 </a><br>
-        <a href="lab5/lab5_7.html"> Задание 7 </a><br>
     </p>    
       <li><h2>Лаб 6</h2></li>
     <p>
@@ -58,6 +59,7 @@
     <p>
         <a href="lab7/lab7_1"> Задание 1 </a><br>
         <a href="lab7/lab7_2"> Задание 2 </a><br>
+        <a href="lab7/lab7_3"> Задание 3 </a><br>
     </p>
     </ul> 
   </body>
