--- a/index.html
+++ b/index.html
@@ -7,59 +7,59 @@
     <ul>
       <li><h2>Лаб 1</h2></li>
     <p>
-        <a href="lab1/lab1_1.html"> Задание 1 </a><br>
-        <a href="lab1/lab1_2.html"> Задание 2 </a><br>
-        <a href="lab1/lab1_3.html"> Задание 3 </a><br>
-        <a href="lab1/lab1_4.html"> Задание 4 </a><br>
-        <a href="lab1/lab1_5.html"> Задание 5 </a><br>
+        <a href="lab1/1_1.html"> Задание 1 </a><br>
+        <a href="lab1/1_2.html"> Задание 2 </a><br>
+        <a href="lab1/1_3.html"> Задание 3 </a><br>
+        <a href="lab1/1_4.html"> Задание 4 </a><br>
+        <a href="lab1/1_5.html"> Задание 5 </a><br>
     </p>
       <li><h2>Лаб 2</h2></li>
     <p>
-        <a href="lab2/lab2_1.html"> Задание 1 </a><br>
-        <a href="lab2/lab2_2.html"> Задание 2 </a><br>
-        <a href="lab2/lab2_3.html"> Задание 3 </a><br>
-        <a href="lab2/lab2_4.html"> Задание 4 </a><br>
-        <a href="lab2/lab2_5.html"> Задание 5 </a><br>
-        <a href="lab2/lab2_6.html"> Задание 5 </a><br>
+        <a href="lab2/2_1.html"> Задание 1 </a><br>
+        <a href="lab2/2_2.html"> Задание 2 </a><br>
+        <a href="lab2/2_3.html"> Задание 3 </a><br>
+        <a href="lab2/2_4.html"> Задание 4 </a><br>
+        <a href="lab2/2_5.html"> Задание 5 </a><br>
+        <a href="lab2/2_6.html"> Задание 5 </a><br>
     </p>
       <li><h2>Лаб 3</h2></li>    
     <p>
-        <a href="lab3/lab3_1.html"> Задание 1 </a><br>
-        <a href="lab3/lab3_2.html"> Задание 2 </a><br>
-        <a href="lab3/lab3_3.html"> Задание 3 </a><br>
-        <a href="lab3/lab3_4.html"> Задание 4 </a><br>
-        <a href="lab3/lab3_5.html"> Задание 5 </a><br>
-        <a href="lab3/lab3_6.html"> Задание 6 </a><br>
-        <a href="lab3/lab3_7.html"> Задание 7 </a><br>
-        <a href="lab3/lab3_8.html"> Задание 8 </a><br>
+        <a href="lab3/3_1.html"> Задание 1 </a><br>
+        <a href="lab3/3_2.html"> Задание 2 </a><br>
+        <a href="lab3/3_3.html"> Задание 3 </a><br>
+        <a href="lab3/3_4.html"> Задание 4 </a><br>
+        <a href="lab3/3_5.html"> Задание 5 </a><br>
+        <a href="lab3/3_6.html"> Задание 6 </a><br>
+        <a href="lab3/3_7.html"> Задание 7 </a><br>
+        <a href="lab3/3_8.html"> Задание 8 </a><br>
     </p>
       <li><h2>Лаб 4</h2></li>
     <p>
-        <a href="lab4/lab4_1.html"> Задание 1 </a><br>
-        <a href="lab4/lab4_2.html"> Задание 2 </a><br>
-        <a href="lab4/lab4_3.html"> Задание 3 </a><br>
-        <a href="lab4/lab4_4.html"> Задание 4 </a><br>
-        <a href="lab4/lab4_5.html"> Задание 5 </a><br>
-        <a href="lab4/lab4_6.html"> Задание 6 </a><br>
-        <a href="lab4/lab4_7.html"> Задание 7 </a><br>
+        <a href="lab4/4_1.html"> Задание 1 </a><br>
+        <a href="lab4/4_2.html"> Задание 2 </a><br>
+        <a href="lab4/4_3.html"> Задание 3 </a><br>
+        <a href="lab4/4_4.html"> Задание 4 </a><br>
+        <a href="lab4/4_5.html"> Задание 5 </a><br>
+        <a href="lab4/4_6.html"> Задание 6 </a><br>
+        <a href="lab4/4_7.html"> Задание 7 </a><br>
     </p>
       <li><h2>Лаб 5</h2></li>
     <p>
-        <a href="lab5/lab5_1.html"> Задание 1 </a><br>
-        <a href="lab5/lab5_2.html"> Задание 2 </a><br>
-        <a href="lab5/lab5_3.html"> Задание 3 </a><br>
+        <a href="lab5/5_1.html"> Задание 1 </a><br>
+        <a href="lab5/5_2.html"> Задание 2 </a><br>
+        <a href="lab5/5_3.html"> Задание 3 </a><br>
     </p>    
       <li><h2>Лаб 6</h2></li>
     <p>
-        <a href="lab6/lab6_1.html"> Задание 1 </a><br>
-        <a href="lab6/lab6_2.html"> Задание 2 </a><br>
-        <a href="lab6/lab6_3.html"> Задание 3 </a><br>
+        <a href="lab6/6_1.html"> Задание 1 </a><br>
+        <a href="lab6/6_2.html"> Задание 2 </a><br>
+        <a href="lab6/6_3.html"> Задание 3 </a><br>
     </p>
       <li><h2>Лаб 7</h2></li>
     <p>
-        <a href="lab7/lab7_1"> Задание 1 </a><br>
-        <a href="lab7/lab7_2"> Задание 2 </a><br>
-        <a href="lab7/lab7_3"> Задание 3 </a><br>
+        <a href="lab7/7_1"> Задание 1 </a><br>
+        <a href="lab7/7_2"> Задание 2 </a><br>
+        <a href="lab7/7_3"> Задание 3 </a><br>
     </p>
     </ul> 
   </body>
