--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     </p>
       <li><h2>Лаб 7</h2></li>
     <p>
-        <a href="lab7/7_1"> Задание 1 </a><br>
-        <a href="lab7/7_2"> Задание 2 </a><br>
-        <a href="lab7/7_3"> Задание 3 </a><br>
+        <a href="lab7/7_1.html"> Задание 1 </a><br>
+        <a href="lab7/7_2.html"> Задание 2 </a><br>
+        <a href="lab7/7_3.html"> Задание 3 </a><br>
     </p>
     </ul> 
   </body>
