--- a/lab3/3_5.html
+++ b/lab3/3_5.html
@@ -2,35 +2,17 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lab3_5</title>
+    <title>Задание 3</title>
+    <script src="lab3.js"></script>
 </head>
 <body>
     <script>
-        "use strict";
-        let str;
-        str = prompt('Введите строку');
-
-        /**
-             * Возвращает усеченную строку str, если ее длина превосходит maxlength
-             *
-             * @param {string} строка
-             * @param {number} максимальная длина строки
-             * @return {string} усеченная строка
-             */
-            
-        function camelize(str)
-        {
-            while (str.includes('-'))
-            {
-                let index;
-                index = str.indexOf('-')
-                str = str.slice(0, index) + str[index+1].toUpperCase() + str.slice(index+2);
-            }
-            return str;
-        }
-
-        console.log(camelize(str));
+        'use strict'
+        let str = prompt('Введите строку str:');
+        
+        alert(camelize(str));
     </script>
 </body>
 </html>
