--- a/lab3/3_7.html
+++ b/lab3/3_7.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -5,14 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Задание 3</title>
-    <script src="lab3.js"></script>
 </head>
 <body>
     <script>
-        "use strict";
-        let N = +prompt("Введите N:");
-        
-        console.log(fibs(N));
+        'use strict'
+        let arr = [];
+        let i = 0;
+        let a;
+    
+        while (!Number.isNaN(a)) {
+            a = +prompt("Введите эл-т массива. Любой символ -- для завершения");
+            if (!Number.isNaN(a))
+                arr[i] = +a;
+            i++;
+        }
+        let arrReverseSorted = arr.slice();
+        arrReverseSorted.sort((a, b) => b-a);
+        console.log(arr);
+        console.log(arrReverseSorted);
     </script>
 </body>
 </html>
